Fazendo modificações e ajustando diretórios

--- a/Django/apps/app/templates/funcionalidades/buscar.html
+++ b/Django/apps/app/templates/funcionalidades/buscar.html
@@ -1,5 +1,5 @@
 <!--1- Copia o código do html para o buscar-->
-{% extends 'app/base.html' %}
+{% extends 'shared/base.html' %}
 {% load static %}
 {% block content %}
     <div class="pagina-inicial"> 
