--- a/Django/apps/app/templates/funcionalidades/index.html
+++ b/Django/apps/app/templates/funcionalidades/index.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html' %}
+{% extends 'shared/base.html' %}
 {% load static %}
 {% block content %}
     <div class="pagina-inicial">
