Inserindo funcionalidade de o usuário adicionar arquivos

--- a/Django/setup/static/styles/style.css
+++ b/Django/setup/static/styles/style.css
@@ -403,7 +403,6 @@ table {
     border-color: #d3d6d8;
 }
 
-
 .row {
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
@@ -517,5 +516,5 @@ table {
     -moz-appearance: none;
     appearance: none;
     -webkit-print-color-adjust: exact;
-    color-adjust: exact;
+    print-color-adjust: exact;
 }
