--- a/Django/apps/app/templates/funcionalidades/editar_imagem.html
+++ b/Django/apps/app/templates/funcionalidades/editar_imagem.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
             <section class="galeria" style="margin-left: 5em">
-                <form action="{% url 'nova_imagem' %}" method="POST" enctype="multipart/form-data">
+                <form action="{% url 'editar_imagem' foto_id %}" method="POST" enctype="multipart/form-data">
                     {% csrf_token %} <!--garante a segurança das informações passadas no formulário-->
                     <div class="row">
                         {% for field in form.visible_fields %} <!--Coloca assim (campos visíveis) porque pode ser que eu não queira mostrar algo para o usuário-->
@@ -12,7 +12,7 @@
                             </div>
                         {% endfor %}
                     <div class="col-12 col-lg-12" style="margin-bottom: 10px;">
-                        <button type="submit" class="btn btn-success col-12" style="padding: top 5px;">Cadastrar Nova Fotografia</button>
+                        <button type="submit" class="btn btn-success col-12" style="padding: top 5px;">Editar Fotografia</button>
                     </div>
                     </div>
                 </form>
