--- a/Django/apps/app/templates/shared/base.html
+++ b/Django/apps/app/templates/shared/base.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}"> <!--Não é para ter / antes do styles-->
     <link rel="icon" type="image/png" href="{% static 'assets/favicon/favicon 48px 1.png' %}">
 </head>
 
